# tokensprint

./: .gitignore  LICENSE  README.md  benchmark.py  model_registry.py  pyproject.toml  run.py
engine/: model.py  model_loader.py  qwen_converter.py  sequence.py  tokenizer.py  utils.py
engine/generation/: block_manager.py  config.py  llm_engine.py  model_runner.py  scheduler.py
engine/kernels/: __init__.py
engine/kernels/helion/: __init__.py  rmsnorm.py  rope.py
engine/kernels/triton/: __init__.py  rmsnorm.py  rope.py
engine/models/: __init__.py  _api.py  _builder.py  _download.py  _loader.py  _registry.py  runtime.py
engine/models/llama/: __init__.py  _archs.py  _checkpoint.py
engine/models/qwen/: __init__.py  _archs.py  _checkpoint.py
engine/nn/: attention.py  base_layers.py  layers.py  rope.py  sdpa.py
tests/: _helpers.py  test_block_manager.py  test_kernel_parity.py  test_model_registry.py  test_rope_scaling.py  test_scheduler_edge_cases.py  test_scheduler_invariants.py  test_scheduler_policy_xfail.py
