[project]
name = "tokensprint"
version = "0.1.0"
description = "Small vllm-style infernece engine"
readme = "README.md"
authors = [{name = "mirceamironenco", email = "mircea.mironenco@gmail.com"}]
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "tyro",
  "psutil",
  "tqdm",
  "xxhash>=3.6",
  "numpy~=2.2",
  "transformers~=4.57.6",
  "safetensors~=0.7",
  "flash-attn>=2.8.3; sys_platform == 'linux' and platform_machine == 'x86_64'",
  # Torch rules:
  # - Skip on macOS Intel (can still be used via conda-forge)
  # - Allow 2.10.x so Linux/Windows can pick 2.10.0+cu129 and macOS can pick 2.10.0
  # "torch>=2.10,<2.11; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torch>=2.9.1,<2.10; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
dev = ["pytest"]
helion = ["helion; sys_platform == 'linux'"]
vllm = ["vllm==0.16.0; sys_platform != 'darwin' or platform_machine != 'x86_64'"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
prerelease = "allow"
environments = [
  "sys_platform == 'linux'",
  "sys_platform == 'win32'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["psutil"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu",   marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
